--- a/descuentos.html
+++ b/descuentos.html
@@ -9,10 +9,27 @@
 </head>
 
 <body>
-  <h1>
-    Porcentajes y Descuentos
-  </h1>
+  <header>
+    <h1>
+      Porcentajes y Descuentos
+    </h1>
+    <p>Este es el segundo taller del curso practico de Js</p>
+  </header>
 
+  <section>
+    <h2>Calcula el precio a pagar tus productos con descuento</h2>
+    <form>
+      <label for="InputPrice"> Escribe el precio de tu producto</label>
+      <input id="InputPrice" type="number" />
+
+      <label for="InputDiscount">Escribe el descuento de tu producto </label>
+      <input id="InputDiscount" type="number" />
+      <button type="button" onclick="onClickButtonPriceDiscount()">
+        Calcular el precio con descuento
+      </button>
+      <p id="ResultP"></p>
+    </form>
+  </section>
   <script src="./js/descuentos.js"></script>
 </body>
 
